<resources>
    <string name="app_name">优车快洗</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_title_news">最新资讯</string>
    <string name="actionbar_title_about">关于我们</string>
    <string name="actionbar_title_appstore">精彩应用</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_collect">收藏</string>
    <string name="leftmenu_item_news">最新资讯</string>
    <string name="leftmenu_item_collect">收藏</string>
    <string name="leftmenu_item_feedback">反馈</string>
    <string name="leftmenu_item_setting">设置</string>
    <string name="leftmenu_item_update">版本更新</string>
    <string name="leftmenu_item_about">关于我们</string>
    <string name="leftmenu_item_app">精彩应用</string>
    <string name="leftmenu_item_user">注册/登录</string>
    <string name="setting_item_clear">清理缓存</string>
    <string name="setting_item_about">关于我们</string>
    <string name="setting_item_help">帮助说明</string>
    <string name="setting_item_study">意见反馈</string>
    <string name="setting_item_app">精彩应用</string>
    <string name="setting_item_update">版本更新</string>
    <string name="setting_item_push">推送通知</string>
    <string name="setting_item_nopic">无图模式</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_activity_apps">AppsActivity</string>
    <string name="title_activity_accession">AccessionActivity</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">加载更多…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开加载更多…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载…</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="home_title_bar">窝窝头.优车快洗</string>
    <string name="yckx_tv">优车快洗</string>
    <string name="chat_tv">在线聊天</string>
    <string name="member_tv">会员中心</string>
    <string name="addOrderTitle">服务详情</string>
    <string name="login">登录</string>
    <string name="userName_tv">您注册的手机号</string>
    <string name="pwd_tv">您的密码</string>
    <string name="regist">立即注册</string>
    <string name="forget">忘记密码</string>
    <string name="phoneNum">请输入您的手机号</string>
    <string name="code">验证码</string>
    <string name="sendcode">发送验证码</string>
    <string name="regist_pwd">请输入登录密码</string>
    <string name="pwd_ok">请确认登录密码</string>
    <string name="modify_ok">确认修改</string>
    <string name="yckx_agreement">&#060;&#060;优车快洗用户使用协议&#062;&#062;</string>
    <string name="yckx_usercenter_tv">优车快洗竭诚为您服务</string>
    <string name="usercenter">个人中心</string>
    <string name="balance">余额</string>
    <string name="kaci">卡次</string>
    <string name="tongzhi">消息中心</string>
    <string name="myform">我的订单</string>
    <string name="evaluate">历史评价</string>
    <string name="mycar">我的车库</string>
    <string name="adress">常用位置</string>
    <string name="opinion">意见反馈</string>
    <string name="aboutus">关于我们</string>
    <string name="developing">研发中</string>
    <string name="feedb_tittle">意见反馈</string>
     <string name="useAgreement_tittle">使用协议</string>
    <string name="userName">用户名</string>
    <string name="newfunction">用户名简介.暂时不开放</string>
    <string name="modify_pwd">修改密码</string>
    <string name="user_agreement">用户使用协议</string>
    <string name="newuser_lead">新手引导</string>
    <string name="customerService">客服咨询</string>
    <string name="exit_login">退 出 登 录</string>
    <string name="noticeTitle">消息列表</string>
    <string name="notice_sys">系统通知</string>
    <string name="notice_form">我的订单状态变更</string>
    <string name="notice_sys_txt">欢迎来到优车快洗,我们将为您提供服务！如果有任何问题，可立即联系客服，或者提交意见</string>
    <string name="productAndService">产品&amp;服务</string>
    <string name="formTitle">订单</string>
    <string name="productName">产品名称</string>
    <string name="product_Store">到站服务</string>
    <string name="serviceCard_StaticTV">服务车辆:</string>
    <string name="servicePhone">联系电话:</string>
    <string name="formStatus">订单状态:</string>
    <string name="ActualPay_static">实际金额:</string>
    <string name="evaluate_atonce">立即评价</string>
     <string name="evaluate_reply">立即回复</string>
    <string name="payAtonce">立即支付</string>
    <string name="sendVoice">发送语音</string>
    <string name="callPhone">拨打电话</string>
    <string name="cancelProduce">取消订单</string>
    <string name="formdetail_title">订单详情</string>
    <string name="formNo">订单编号</string>
    <string name="formStatus_detail">订单状态</string>
    <string name="formTime">下单时间</string>
    <string name="formReceiveTime">接单时间</string>
    <string name="formCompleteTime">完成时间</string>
    <string name="formPay">支付金额</string>
    <string name="formPayType">支付方式</string>
    <string name="formStore">联盟点</string>
    <string name="formProject">服务项目</string>
    <string name="formCard">服务车辆</string>
    <string name="formStyle">服务方式</string>
    <string name="evaluationTitle">订单评论</string>
    <string name="selectFormPayStyle">选择支付方式</string>
    <string name="orderOk_title">订单确认</string>
    <string name="carManagerTitle">我的车库</string>
    <string name="AddCardTitle">添加修改车辆</string>
    <string name="historical_evaluation_title">历史评价</string>
    <string name="adress_title">地址管理</string>
    <string name="addadress_title">地址信息</string>
    <string name="washerMain_title">抢单</string>
    <string name="washerMain">美护师主界面</string>
    <string name="pingjiaMain">评价</string>
    <string name="dingdan_chuli">处理订单</string>
    <string name="daka_title">上下班打卡</string>
    <string name="updatePark">更新车位</string>
    <string name="settle_title">结算</string>
    <string name="wenan1">温馨提示:为保护您的合法权益，且不影响到结算系统关于个人收入的计算，请美护师或个人代理,严格遵守&lt;&lt;优车快洗个人代理协议&gt;&gt;中关于上下班打卡制度的说明!</string>
    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>
    <string-array name="preference_values_tts_role">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
</resources>