<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imgLeft"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_homeasup_default" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/tv_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Uwash"
                android:textSize="30dp"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/appName_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_layout"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="窝窝头.优车快洗" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userName_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName_layout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:numeric="integer"
                android:id="@+id/userName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:drawableLeft="@drawable/icon_account"
                android:hint="@string/userName_tv"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwd_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName_layout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:password="true"
                android:id="@+id/passWord"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:drawableLeft="@drawable/icon_password"
                android:hint="@string/pwd_tv"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLogin_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwd_layout"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:background="@drawable/login_src"
                android:text="@string/login"
                android:textColor="#ffffff" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/regist_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin_layout"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/tvRegist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/regist"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tvForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/forget"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>